# minesweeper

./: .clangd  CMakeLists.txt  globals.h  main.cpp
engine/: button.h  image.h  rectangle.h  text.h  window.h
minesweeper/: CMakeLists.txt  cell.cpp  cell.h  flag_counter.h  grid.h  new_game_button.h  ui.h
